# tdeskdop-db-reader

./: .gitignore  Cargo.toml  build.rs
src/: color.rs  crypto.rs  descriptor.rs  main.rs  schema.rs  settings.rs
