[package]
name = "reader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
bytemuck = { version = "1.7.2", features = ["derive", "extern_crate_alloc", "min_const_generics"] }
byteorder = "1.4.3"
crczoo = "0.1.1"
dirs = "4.0.0"
encoding_rs = "0.8.28"
grammers-crypto = "0.3.0"
md5 = "0.7.0"
num_enum = "0.5.4"
once_cell = "1.8.0"
ring = "0.16.20"

[build-dependencies]
crczoo = "0.1.1"
heck = "0.3.3"
indexmap = "1.7.0"
